Fixed button too big on phones

--- a/public/styles/components/_button.sass
+++ b/public/styles/components/_button.sass
@@ -15,6 +15,10 @@ input[type="button"]
     text-decoration: none
     +real-small-caps
 
+    +mobile
+        font-size: 1.4rem
+        padding: 0 10px
+
 .button:hover,
 button:hover,
 input[type="submit"]:hover,
